After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 650934 - Memory leak in shell-recorder.c
Memory leak in shell-recorder.c
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-24 04:32 UTC by Owen Taylor
Modified: 2011-05-25 20:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell-recorder: missing XFree (819 bytes, patch)
2011-05-24 22:51 UTC, Maxim Ermilov
committed Details | Review

Description Owen Taylor 2011-05-24 04:32:30 UTC
While reviewing the patch 'shell-xfixes-cursor: missing XFree' in bug 642652 for inclusion in gnome-shell-3.0.2, determined that the same bug occurs in shell-recorder.chh
Comment 1 Maxim Ermilov 2011-05-24 22:51:01 UTC
Created attachment 188529 [details] [review]
shell-recorder: missing XFree
Comment 2 Owen Taylor 2011-05-25 20:40:26 UTC
Looks good