shell-recorder: missing XFree

https://bugzilla.gnome.org/show_bug.cgi?id=650934